--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,17 +15,24 @@ dependencies:
   cupertino_icons: ^1.0.8
   equatable: ^2.0.5
 
-# Utility
+  # Utility
   kartal: ^3.5.0
-# ROUTE
+  flutter_svg: ^2.0.10+1
+  lottie: ^3.1.2
+
+
+  # ROUT
   auto_route: ^9.2.0
-# STATE MANAGEMENT
+  # STATE MANAGEMENT
   bloc: ^8.1.4
   flutter_bloc: ^8.1.6
 
   json_annotation: ^4.9.0
-# Network
+  # Network
   dio: ^5.7.0
+
+    # local storage
+  shared_preferences: ^2.0.15
 
 dev_dependencies:
   flutter_test:
@@ -52,9 +59,14 @@ flutter:
   # the material Icons class.
   uses-material-design: true
 
+  assets:
+    - assets/images/
+    - assets/fonts/
+    - assets/lottie/
+
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
+  #   assets:
+  #     - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
@@ -68,12 +80,17 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
+  fonts:
+    - family: Galano Grotesque
+      fonts:
+         - asset: assets/fonts/GalanoGrotesqueBold.otf
+         - asset: assets/fonts/GalanoGrotesqueSemiBold.otf
+         - asset: assets/fonts/GalanoGrotesqueRegular.otf
+         - asset: assets/fonts/GalanoGrotesqueMedium.otf
+         - asset: assets/fonts/GalanoGrotesqueLight.otf
+         - asset: assets/fonts/GalanoGrotesqueThin.otf
+         - asset: assets/fonts/GalanoGrotesqueExtraLight.otf
+
   #   - family: Trajan Pro
   #     fonts:
   #       - asset: fonts/TrajanPro.ttf
