--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -6,7 +6,7 @@ publish_to: 'none'
 version: 1.0.0+1
 
 environment:
-  sdk: ^3.5.2
+  sdk: '>=3.5.2 <4.0.0'
 
 dependencies:
   flutter:
@@ -32,7 +32,7 @@ dependencies:
   dio: ^5.7.0
 
     # local storage
-  shared_preferences: ^2.0.15
+  shared_preferences: ^2.2.2
 
 dev_dependencies:
   flutter_test:
