--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,50 +13,41 @@ dependencies:
     sdk: flutter
 
   cupertino_icons: ^1.0.8
-  equatable: ^2.0.5
 
   # Utility
   kartal: ^3.5.0
   flutter_svg: ^2.0.10+1
+
+  # ANIMATION
   lottie: ^3.1.2
 
-
-  # ROUT
+  # ROUTE
   auto_route: ^9.2.0
+
   # STATE MANAGEMENT
   bloc: ^8.1.4
   flutter_bloc: ^8.1.6
 
-  json_annotation: ^4.9.0
   # Network
   dio: ^5.7.0
+  json_annotation: ^4.9.0
+  equatable: ^2.0.5
 
-    # local storage
+  # local storage
   shared_preferences: ^2.2.2
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
 
-  # The "flutter_lints" package below contains a set of recommended lints to
-  # encourage good coding practices. The lint set provided by the package is
-  # activated in the `analysis_options.yaml` file located at the root of your
-  # package. See that file for information about deactivating specific lint
-  # rules and activating additional ones.
   flutter_lints: ^4.0.0
   build_runner: ^2.4.12
   json_serializable: ^6.8.0
   auto_route_generator: ^9.0.0
 
-# For information on the generic Dart part of this file, see the
-# following page: https://dart.dev/tools/pub/pubspec
 
-# The following section is specific to Flutter packages.
 flutter:
 
-  # The following line ensures that the Material Icons font is
-  # included with your application, so that you can use the icons in
-  # the material Icons class.
   uses-material-design: true
 
   assets:
@@ -64,22 +55,6 @@ flutter:
     - assets/fonts/
     - assets/lottie/
 
-  # To add assets to your application, add an assets section, like this:
-  #   assets:
-  #     - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
-
-  # An image asset can refer to one or more resolution-specific "variants", see
-  # https://flutter.dev/to/resolution-aware-images
-
-  # For details regarding adding assets from package dependencies, see
-  # https://flutter.dev/to/asset-from-package
-
-  # To add custom fonts to your application, add a fonts section here,
-  # in this "flutter" section. Each entry in this list should have a
-  # "family" key with the font family name, and a "fonts" key with a
-  # list giving the asset and other descriptors for the font. For
-  # example:
   fonts:
     - family: Galano Grotesque
       fonts:
@@ -90,12 +65,3 @@ flutter:
          - asset: assets/fonts/GalanoGrotesqueLight.otf
          - asset: assets/fonts/GalanoGrotesqueThin.otf
          - asset: assets/fonts/GalanoGrotesqueExtraLight.otf
-
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
-  #         weight: 700
-  #
-  # For details regarding fonts from package dependencies,
-  # see https://flutter.dev/to/font-from-package
